public/egc_dark_theme.css
e-gantt-chart {
    background: black;
    color: white;
    font-family: sans-serif;
    user-select: none;
}

e-gantt-chart::part(event) {
    background: #444444;
    transition: letter-spacing 0.3s;
    cursor: pointer;
}


e-gantt-chart::part(event-disabled) {
    background: #555555;
    transition: letter-spacing 0.3s;
}

e-gantt-chart::part(event):focus {
    background: #444444;
    letter-spacing: 0.3rem;
}

e-gantt-chart::part(row-header) {
    background: black;
    cursor: pointer;
}

e-gantt-chart::part(row-header):hover,
e-gantt-chart::part(group-header):hover {
    background: black;
    color: #dddddd;
    cursor: pointer;
}


e-gantt-chart::part(row-header-disabled),
e-gantt-chart::part(group-header-disabled) {
    background: black;
}

e-gantt-chart::part(control-panel) {
    display: flex;
    align-items: end;
    justify-content: space-between;
}

e-gantt-chart::part(row) {
    background-color: #222222;
}

e-gantt-chart::part(title-controller),
e-gantt-chart::part(zoom-controller),
e-gantt-chart::part(date-controller),
e-gantt-chart::part(column-controller),
e-gantt-chart::part(group-name-controller),
e-gantt-chart::part(group-name-controller-disabled),
e-gantt-chart::part(row-name-controller),
e-gantt-chart::part(row-name-controller-disabled) {
    background-color: black;
    color: white;
    border: none;
    border-bottom: 1px solid white;
    bottom: 0;
}

e-gantt-chart::part(group-name-controller),
e-gantt-chart::part(group-name-controller-disabled) {
    text-align: center;
}

